--- a/ConsoleApplication2/packages.config
+++ b/ConsoleApplication2/packages.config
@@ -3,6 +3,7 @@
   <package id="Google.Apis" version="1.40.3" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.40.3" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.40.3" targetFramework="net45" />
+  <package id="Google.Apis.Drive.v3" version="1.40.3.1671" targetFramework="net45" />
   <package id="Google.Apis.Sheets.v4" version="1.40.3.1671" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
 </packages>
